--- a/2022-2023/Programming Level-up/4.introduction-to-numerical-computing-numpy.tex
+++ b/2022-2023/Programming Level-up/4.introduction-to-numerical-computing-numpy.tex
@@ -1,4 +1,4 @@
-% Created 2022-09-11 Sun 08:42
+% Created 2022-09-19 Mon 16:41
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -24,7 +24,7 @@
 \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\scriptsize}
 \usetheme{Berkeley}
 \author{Jay Morgan}
-\date{11th October 2021}
+\date{21st September 2022}
 \title{Programming Level-up}
 \subtitle{Lecture 4 -- An Introduction to Numerical Computing in Python}
 \hypersetup{
@@ -43,12 +43,12 @@
 
 
 \section{NumPy}
-\label{sec:org3c26f4f}
+\label{sec:org0e39853}
 
 \subsection{What is NumPy}
-\label{sec:org8e3defc}
+\label{sec:org20defb9}
 
-\begin{frame}[label={sec:org0046749},fragile]{What is NumPy?}
+\begin{frame}[label={sec:orgf951d45},fragile]{What is NumPy?}
  NumPy (\url{https://numpy.org/}) is one of the fundamental Python libraries for scientific
 computing. In essence, its aim is to make vector and array processing in Python much
 more efficient. Therefore, it would be your go-to for (numerical) data
@@ -72,7 +72,7 @@ for i in range(len(A)):
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgbe0b003},fragile]{What is NumPy?}
+\begin{frame}[label={sec:orga8a46c1},fragile]{What is NumPy?}
  The previous example is quite un-weidly. We have to manually loop through the
 matrices and apply the computation for each element. This can be \alert{very} slow in
 Python. NumPy provides a much cleaner and quicker interface:
@@ -92,7 +92,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org0fbd932},fragile]{Install NumPy}
+\begin{frame}[label={sec:org4d40691},fragile]{Install NumPy}
  Before we can use NumPy, we must first install it if its not already. NumPy can
 easily be installed with one of your package managers of choice. For example, if you
 want to install via conda:
@@ -108,7 +108,7 @@ pip install numpy
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org082596b},fragile]{Creating a numpy array}
+\begin{frame}[label={sec:org0d1b3c4},fragile]{Creating a numpy array}
  As we've seen previously, we use \texttt{np.array} to create a numpy array from a Python data type
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -134,9 +134,9 @@ A = np.array([[1], [1, 2]])
 \end{frame}
 
 \subsection{Working with NumPy}
-\label{sec:org68193b1}
+\label{sec:orga8583a0}
 
-\begin{frame}[label={sec:org1f9846c},fragile]{Basic attributes}
+\begin{frame}[label={sec:org2398484},fragile]{Basic attributes}
  A numpy array has various attributes that are useful for our numerical
 computing. Some of these include:
 
@@ -160,7 +160,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgfc0b72f},fragile]{Different data types}
+\begin{frame}[label={sec:org35fc0dd},fragile]{Different data types}
  In the previous example, the elements in the array we \texttt{int64}. But normally, we will
 see \texttt{float64}. However, there are many other available data types, where each of the
 different data types affects how much memory is used to represent the data.
@@ -177,7 +177,7 @@ different data types affects how much memory is used to represent the data.
 \url{https://numpy.org/doc/stable/reference/arrays.dtypes.html}
 \end{frame}
 
-\begin{frame}[label={sec:org90f5229},fragile]{Creating arrays with different dtypes}
+\begin{frame}[label={sec:orgcfef2fe},fragile]{Creating arrays with different dtypes}
  When creating a NumPy array, NumPy will select what it thinks to be the most
 appropriate data type. However, we can tell NumPy explicitly what the data type
 should be with the \texttt{dtype} argument.
@@ -203,7 +203,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org5e5f39f},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:orgc9951e4},fragile]{Different ways of creating arrays}
  NumPy also provides us with a number of different functions to create arrays. Instead
 of doing this:
 
@@ -221,7 +221,7 @@ A = np.zeros((2, 5, 5))  # 3 dimensional
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org8c194f1},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:orgac685e7},fragile]{Different ways of creating arrays}
  Another commonly used array creation function is the \texttt{np.random.randn} function. This
 creates an array where elements are sampled from a normal distribution.
 
@@ -241,7 +241,7 @@ Results:
 tuple, we pass multiple arguments to the function.
 \end{frame}
 
-\begin{frame}[label={sec:org0d3a7d4},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:org61991e3},fragile]{Different ways of creating arrays}
  It is also convenient to create arrays with ranges of elements.
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -270,7 +270,7 @@ Results:
 \end{frame}
 
 
-\begin{frame}[label={sec:org544173d},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:org1e8d82a},fragile]{Different ways of creating arrays}
  There are many more ways to create arrays. Some include:
 
 \begin{itemize}
@@ -286,9 +286,9 @@ subject: \url{https://numpy.org/doc/stable/user/basics.creation.html}
 \end{frame}
 
 \subsection{Indexing Arrays}
-\label{sec:org9211437}
+\label{sec:org3456ba6}
 
-\begin{frame}[label={sec:org603b39d},fragile]{Slicing NumPy arrays}
+\begin{frame}[label={sec:orgfe00bad},fragile]{Slicing NumPy arrays}
  In native Python, when we have a 'matrix' like data structure (just a list of lists),
 and we want to access a particular element from this matrix, we have to do something
 like:
@@ -317,7 +317,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org78da73f},fragile]{Slicing NumPy Arrays}
+\begin{frame}[label={sec:org27e6b90},fragile]{Slicing NumPy Arrays}
  If we wanted to get all elements from the 2nd column we would use the \texttt{:} notation. For
 example:
 
@@ -344,7 +344,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org8127d5f},fragile]{Slicing NumPy Arrays}
+\begin{frame}[label={sec:orgb7297ad},fragile]{Slicing NumPy Arrays}
  Note that when we slice an array, we are \alert{not copying} the elements:
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -373,7 +373,26 @@ b = A[:, 1].copy()
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org3e63a7e}]{Slicing NumPy Arrays}
+\begin{frame}[label={sec:org246f2ea},fragile]{Slicing NumPy Arrays}
+ If we have a multi-dimensional array, to which we wish to index on the final
+dimension, one way to achieve this is by doing the following:
+
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
+A = np.random.randn(10, 2, 5, 4)  # our array to slice
+A[:, :, :, 1:2]  # slice on the last dimension
+\end{minted}
+
+This can get pretty tedious the more that the number of dimensions increases. But! we
+have one syntactical shortcut at our disposal: the ellipses '\ldots{}'. Using the ellipses
+in place of the many ':' slices on each dimension, we're telling NumPy to just take
+all elements from the prior dimensions. For example:
+
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
+A[..., 1:2]  # same slice on the last dimension
+\end{minted}
+\end{frame}
+
+\begin{frame}[label={sec:org3128ffe}]{Slicing NumPy Arrays}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.7\textwidth]{./images/indexing.png}
@@ -381,7 +400,7 @@ b = A[:, 1].copy()
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgb8a848c},fragile]{Boolean Indexing}
+\begin{frame}[label={sec:orge9d0f98},fragile]{Boolean Indexing}
  NumPy arrays can also be composed of boolean elements
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -409,7 +428,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgb258b18},fragile]{Boolean Indexing}
+\begin{frame}[label={sec:orga9b8465},fragile]{Boolean Indexing}
  Therefore we can apply computations to only part of the array using this indexing
 feature:
 
@@ -427,9 +446,9 @@ Results:
 \end{frame}
 
 \subsection{Reshaping and Resizing}
-\label{sec:org3c5996b}
+\label{sec:org7f188f6}
 
-\begin{frame}[label={sec:orga5dff20},fragile]{Reshape}
+\begin{frame}[label={sec:org3c7e072},fragile]{Reshape}
  After an array has been created, we can modify its structure/shape using various
 functions. The first we shall look at is \texttt{.reshape}. For example, let us create a
 vector of 4 elements and then reshape it into an array of 2x2 elements. Of course,
@@ -452,7 +471,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgacf11a3},fragile]{Flatten}
+\begin{frame}[label={sec:orgfe5983d},fragile]{Flatten}
  If we wanted to take a 2d array and reshape it into a vector, we could of course use
 the \texttt{.reshape} function again. But we could also use \texttt{.flatten}.
 
@@ -467,7 +486,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org49d203e},fragile]{Flatten}
+\begin{frame}[label={sec:org18f436a},fragile]{Flatten}
  When specifying the new dimensionality of the reshaped array, \texttt{-1} is a shortcut to
 specify the dimensionality to allow reshaping to occur correctly. For example:
 
@@ -490,7 +509,7 @@ We're telling NumPy to create an array with 2 elements on the 1st dimension, and
 however many elements on the second dimension.
 \end{frame}
 
-\begin{frame}[label={sec:orgf29e5a5},fragile]{Add a dimension}
+\begin{frame}[label={sec:org53d8d06},fragile]{Add a dimension}
  We can add and remove dimensions using \texttt{.expand\_dims} and \texttt{.squeeze}, respectively.
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -512,7 +531,7 @@ We are taking a vector and adding a dimension. Note that we have to use
 \texttt{np.expand\_dims} passing the object we want to expand and not \texttt{A.expand\_dims}.
 \end{frame}
 
-\begin{frame}[label={sec:org7e543b2},fragile]{Add a dimension}
+\begin{frame}[label={sec:org109dc85},fragile]{Add a dimension}
  We can use an indexing trick with \texttt{None} to do the expansion in just the same way:
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -533,7 +552,7 @@ Results:
 Where \texttt{None} indicates to NumPy where we want to add the new dimension.
 \end{frame}
 
-\begin{frame}[label={sec:org339f7c5},fragile]{Remove a dimension}
+\begin{frame}[label={sec:orga0054af},fragile]{Remove a dimension}
  If we want to instead remove a dimension, we can use \texttt{.squeeze()}
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -550,7 +569,7 @@ We are removing the 2nd dimension, but \alert{note} that the elements must be si
 you cannot squeeze a 2x2 array.
 \end{frame}
 
-\begin{frame}[label={sec:org47931aa},fragile]{Matrix transpose}
+\begin{frame}[label={sec:org7ee54b0},fragile]{Matrix transpose}
  Another useful feature is the matrix transpose:
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -582,7 +601,7 @@ Results:
 \end{frame}
 
 
-\begin{frame}[label={sec:org827f52a},fragile]{Composing arrays}
+\begin{frame}[label={sec:org1de8367},fragile]{Composing arrays}
  If we have multiple arrays we want to 'join' together, we can use \texttt{np.hstack} for
 horizontally joining, or \texttt{np.vstack} for vertically joining arrays. \alert{Note} the dimensions
 must match in the direction your stacking.
@@ -612,9 +631,9 @@ Results:
 \end{frame}
 
 \subsection{Arithmetic Operations}
-\label{sec:org3e1f9ff}
+\label{sec:orgcedd46f}
 
-\begin{frame}[label={sec:org43bd15f},fragile]{Arithmetic Operations}
+\begin{frame}[label={sec:org692228f},fragile]{Arithmetic Operations}
  We have already seen some basic examples of arithmetic operations in NumPy. But its
 worth looking at these in detail.
 
@@ -640,7 +659,7 @@ We can perform vector and matrix arithmetic using Python's infix operators like 
 etc.
 \end{frame}
 
-\begin{frame}[label={sec:org127a5b8},fragile]{Arithmetic Operations}
+\begin{frame}[label={sec:org18e098d},fragile]{Arithmetic Operations}
  When we perform arithmetic operations, NumPy will convert the data into arrays for
 us. While this can help, its not best practice for vectors and matrices, for scalars
 it will be fine.
@@ -658,7 +677,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgd3cf350},fragile]{Broadcasting}
+\begin{frame}[label={sec:org3e69306},fragile]{Broadcasting}
  When we are working with singletons or scalar values, NumPy will automatically
 perform the broadcasting for us. So for example, if we want to double each element of
 an array:
@@ -678,7 +697,7 @@ NumPy will automatically broadcast the scalar \texttt{2} to every element of the
 size of \texttt{B}.
 \end{frame}
 
-\begin{frame}[label={sec:orgc047d57}]{Comparison with Functions}
+\begin{frame}[label={sec:orgddd536d}]{Comparison with Functions}
 NumPy provides, in many cases, both infix and function operations.
 
 \begin{center}
@@ -700,7 +719,7 @@ Exponential, Logarithm &  & np.exp, np.log\\
 \url{https://numpy.org/doc/stable/reference/routines.math.html}
 \end{frame}
 
-\begin{frame}[label={sec:orgff6babd},fragile]{More complex operations}
+\begin{frame}[label={sec:org0c04401},fragile]{More complex operations}
  There are a number of different operations one can perform on a matrix. Such as the
 dot product of two matrices:
 
@@ -728,7 +747,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgc7e24db},fragile]{More complex operations}
+\begin{frame}[label={sec:org97ba596},fragile]{More complex operations}
  One mystical function is the \texttt{einsum} function. This function can effectively replace
 other functions like \texttt{dot} and \texttt{inner} but it takes some understanding on how it
 works. \texttt{einsum} is the application of Einstein Summation, a succinct method of
@@ -756,7 +775,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org5b1f08a},fragile]{More complex operations}
+\begin{frame}[label={sec:org69a33ee},fragile]{More complex operations}
  In \texttt{einsum} we are giving a letter for each dimension of each array we pass to the
 function.
 
@@ -771,7 +790,7 @@ very powerful function with a very succinct syntax.
 \url{https://www.youtube.com/watch?v=CLrTj7D2fLM} - Khan Academy - Einstein Summation Convention
 \end{frame}
 
-\begin{frame}[label={sec:orgc8b4e59},fragile]{Vectorizing a function}
+\begin{frame}[label={sec:orgf4dba0f},fragile]{Vectorizing a function}
  Lets say you have some function that computes the square of a number:
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -801,7 +820,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orge29972c},fragile]{Vectorize a function}
+\begin{frame}[label={sec:org3e19a32},fragile]{Vectorize a function}
  However, if the function is more complicated, it will not work.
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -828,7 +847,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orga73719b},fragile]{Vectorize a function}
+\begin{frame}[label={sec:org75bf3df},fragile]{Vectorize a function}
  To allow us to use this function over an array, we can use the \texttt{np.vectorize} function
 to create a new function, which applies \texttt{myfunc} over each element.
 
@@ -847,7 +866,7 @@ Here we pass the function we want to vectorize \texttt{myfunc} to the \texttt{np
 function. The return of this function is another function!
 \end{frame}
 
-\begin{frame}[label={sec:org16e6092}]{Reading more}
+\begin{frame}[label={sec:orgcf66b28}]{Reading more}
 We've only scratched the surface of what NumPy can offer us! One of the best starting
 points for learning about NumPy is NumPy's own user guide on the web: \url{https://numpy.org/doc/stable/user/index.html}
 
