--- a/2022-2023/Programming Level-up/5.introduction-to-linux.org
+++ b/2022-2023/Programming Level-up/5.introduction-to-linux.org
@@ -1,28 +1,9 @@
-#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline author:t
-#+options: broken-links:nil c:nil creator:nil d:(not "LOGBOOK") date:t e:t email:nil
-#+options: f:t inline:t num:t p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
-#+options: timestamp:t title:t toc:t todo:t |:t
 #+title: Programming Level-up
 #+SUBTITLE: An Introduction to using Linux
-#+date: 11th October 2021
+#+date: 7th October 2022
 #+author: Jay Morgan
-#+language: en
-#+select_tags: export
-#+exclude_tags: noexport
-#+creator: Emacs 27.1 (Org mode 9.4.6)
-#+cite_export:
-
-#+startup: beamer
-#+LATEX_CLASS: beamer
-#+LATEX_CLASS_OPTIONS: [10pt]
-#+BEAMER_FRAME_LEVEL: 2
-#+BEAMER_THEME: Berkeley
-#+LATEX_HEADER: \setlength{\parskip}{5pt}
-#+LATEX_HEADER: \newcommand{\footnoteframe}[1]{\footnote[frame]{#1}}
-#+LaTeX_HEADER: \addtobeamertemplate{footnote}{}{\vspace{2ex}}
-#+LATEX_HEADER: \usepackage{tabularx}
-
-#+PROPERTY: header-args:python :results pp output :session :exports both :eval never-export :post commentify(*this*)
+#+include: ./header.org
+#+PROPERTY: header-args:python :results pp output :session :exports both :eval never-export
 
 #+name: commentify
 #+begin_src emacs-lisp :var result="" :exports none
@@ -1353,3 +1334,8 @@ With the =data.pkl= file downloaded, we can visualise the results using
 https://pageperso.lis-lab.fr/jay.morgan/resources/2021-programming-level-up/lectures/week-5/plot-lorenz.py
 
 If everything has been run correctly, you should see a plot of the lorenz attractor.
+
+
+# Local Variables:
+# org-latex-minted-options: (("frame" "lines") ("linenos=true") ("firstnumber=last") ("fontsize=\\footnotesize") ("bgcolor=LightGray") ("xleftmargin=5pt") ("tabsize=2") ("breaklines=true") ("numbersep=10pt"))
+# End:
